# WaveGen

./: CMakeLists.txt  README  README.md  WaveGen.kdev4  start.bat  start.sh
modulators/: default.py
src/: main.cpp  noisegenerator.cpp  noisegenerator.h  pymodule.cpp  pymodule.h  wavegen.cpp  wavegen.h  wavegen.ui
